brain/sources/prod-metadata/objects/Deliverable__c/Deliverable__c.object-meta.xml
<CustomObject>
    <label>Deliverable</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>