brain/sources/prod-metadata/objects/Deliverable__c/fields/AI_Latest_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Latest_Score__c</fullName>
    <label>AI Latest Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>