brain/sources/prod-metadata/objects/Deliverable__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>