brain/sources/prod-metadata/objects/Deliverable__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deliverables1</relationshipName>
    <type>Lookup</type>
</CustomField>