brain/sources/prod-metadata/objects/Deliverable__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <label>Attempt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>