brain/sources/prod-metadata/objects/Deliverable__c/fields/Candidate_Training__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Training</label>
    <referenceTo>Candidate_Training__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>