brain/sources/prod-metadata/objects/Deliverable__c/fields/Candidate_Training_Step__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Training_Step__c</fullName>
    <label>Candidate Training Step</label>
    <referenceTo>CandidateTrainingStep__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>