brain/sources/prod-metadata/objects/Deliverable__c/fields/Definitions__c.field-meta.xml
<CustomField>
    <fullName>Definitions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Definition</label>
    <referenceTo>Step_Deliverable_Definition__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>