brain/sources/prod-metadata/objects/Deliverable__c/fields/Due_Date_Candidate_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Candidate_Time_Zone__c</fullName>
    <label>Due Date Candidate Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>