brain/sources/prod-metadata/objects/Deliverable__c/fields/Due_Date_IST__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_IST__c</fullName>
    <label>Due Date IST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>