brain/sources/prod-metadata/objects/Deliverable__c/fields/Due_Date_Sort__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Sort__c</fullName>
    <label>Due Date Sort</label>
    <type>DateTime</type>
</CustomField>