brain/sources/prod-metadata/objects/Deliverable__c/fields/Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>Extension_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extension Requested</label>
    <type>Checkbox</type>
</CustomField>