brain/sources/prod-metadata/objects/Deliverable__c/fields/Extension_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Extension_Requested_At__c</fullName>
    <label>Extension Requested At</label>
    <type>DateTime</type>
</CustomField>