brain/sources/prod-metadata/objects/Deliverable__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>