brain/sources/prod-metadata/objects/Deliverable__c/fields/Latest_AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Latest_AI_Feedback__c</fullName>
    <label>Latest AI Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>