brain/sources/prod-metadata/objects/Deliverable__c/fields/Linked_Session__c.field-meta.xml
<CustomField>
    <fullName>Linked_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>