brain/sources/prod-metadata/objects/Deliverable__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>