brain/sources/prod-metadata/objects/Deliverable__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>