brain/sources/prod-metadata/objects/Deliverable__c/validationRules/Prevent_Past_Approval_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Past_Approval_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Approved_At__c)),
OR(
ISNEW(),
ISCHANGED(Approved_At__c)
),
DATEVALUE(Approved_At__c) &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>The Approved At date and time cannot be in the past.</errorMessage>
</ValidationRule>